# poker-trainer

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  button.py  card.py  colors.pptx  community.py  deck.py  docker-compose.yml  equity.py  game.py  gameStates.py  game_backend.py  hand.py  hand_Backend.py  hole.py  main.py  numpy_cards.py  player.py  poker_functions.py  positions.py  precompute_equity.py  preflop_equity.json  rangeFeedback.py  ranges.py  sandbox.py  skills-lock.json  table.py  test_eval.py  utils.py
backend/: Dockerfile  alembic.ini  environment.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/scripts/: seed.py
backend/src/: main.py
backend/src/api/: auth.py  decisions.py  equity.py  evaluate.py
backend/src/core/: config.py  deps.py  security.py
backend/src/db/: session.py
backend/src/engine/: decisions.py  equity.py  evaluator.py  precompute_equity.py  ranges.py  variables.py
backend/src/models/: __init__.py  base.py  user.py
backend/src/schemas/: decisions.py  equity.py  evaluate.py  user.py
backend/src/services/: game.py  villain.py
backend/tests/: conftest.py  test_api_decisions.py  test_api_equity.py  test_api_evaluate.py  test_auth.py  test_decisions.py  test_equity.py  test_evaluator.py  test_game.py
docs/adr/: 0001-web-only-mvp.md  0002-active-game-state-in-process.md  0003-rest-only-api.md  0004-invite-only-auth.md  0005-fsm-game-module.md  0006-monte-carlo-postflop-villain-equity.md  0007-decision-level-persistence.md
docs/agents/: domain.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+4 files in other folders)
