[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-trainer"
version = "0.1.0"
description = "Backend for a poker math training program with a vectorized NumPy hand evaluator and equity engine."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-socketio>=5.11.0",
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
